// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Palaute should insert and manage feedback 1`] = `
Object {
  "description": "projekti palaute lisätty",
  "mockedtime": "2023-01-01T00:00",
  "obj": Array [
    Object {
      "__typename": "Palaute",
      "etunimi": "",
      "id": "***unittest***",
      "kysymysTaiPalaute": "Nimetön palaute.",
      "liitteet": Array [],
      "oid": "1.2.246.578.5.1.2978288874.2711575506",
      "puhelinnumero": "",
      "sahkoposti": "",
      "sukunimi": "",
      "vastaanotettu": "***unittest***",
      "yhteydenottotapaEmail": true,
      "yhteydenottotapaPuhelin": true,
    },
    Object {
      "__typename": "Palaute",
      "etunimi": "Joku",
      "id": "***unittest***",
      "kysymysTaiPalaute": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
      "liitteet": Array [],
      "oid": "1.2.246.578.5.1.2978288874.2711575506",
      "puhelinnumero": "123456",
      "sahkoposti": "test@vayla.fi",
      "sukunimi": "Toinen",
      "vastaanotettu": "***unittest***",
      "yhteydenottotapaEmail": true,
      "yhteydenottotapaPuhelin": true,
    },
    Object {
      "__typename": "Palaute",
      "etunimi": "Matti",
      "id": "***unittest***",
      "kysymysTaiPalaute": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
      "liitteet": Array [
        Object {
          "__typename": "Liite",
          "liite": "/palautteet/***unittest***/logo.png",
          "skannausTulos": undefined,
        },
      ],
      "oid": "1.2.246.578.5.1.2978288874.2711575506",
      "puhelinnumero": "123456",
      "sahkoposti": "test@vayla.fi",
      "sukunimi": "Meikalainen",
      "vastaanotettu": "***unittest***",
      "yhteydenottotapaEmail": false,
      "yhteydenottotapaPuhelin": true,
    },
  ],
}
`;

exports[`Palaute should insert and manage feedback 2`] = `
Object {
  "description": "projekti palaute otettu käsittelyyn",
  "mockedtime": "2023-01-01T00:00",
  "obj": Array [
    Object {
      "__typename": "Palaute",
      "etunimi": "",
      "id": "***unittest***",
      "kysymysTaiPalaute": "Nimetön palaute.",
      "liitteet": Array [],
      "oid": "1.2.246.578.5.1.2978288874.2711575506",
      "puhelinnumero": "",
      "sahkoposti": "",
      "sukunimi": "",
      "vastaanotettu": "***unittest***",
      "yhteydenottotapaEmail": true,
      "yhteydenottotapaPuhelin": true,
    },
    Object {
      "__typename": "Palaute",
      "etunimi": "Joku",
      "id": "***unittest***",
      "kysymysTaiPalaute": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
      "liitteet": Array [],
      "oid": "1.2.246.578.5.1.2978288874.2711575506",
      "puhelinnumero": "123456",
      "sahkoposti": "test@vayla.fi",
      "sukunimi": "Toinen",
      "vastaanotettu": "***unittest***",
      "yhteydenottotapaEmail": true,
      "yhteydenottotapaPuhelin": true,
    },
    Object {
      "__typename": "Palaute",
      "etunimi": "Matti",
      "id": "***unittest***",
      "kysymysTaiPalaute": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
      "liitteet": Array [
        Object {
          "__typename": "Liite",
          "liite": "/palautteet/***unittest***/logo.png",
          "skannausTulos": undefined,
        },
      ],
      "oid": "1.2.246.578.5.1.2978288874.2711575506",
      "puhelinnumero": "123456",
      "sahkoposti": "test@vayla.fi",
      "sukunimi": "Meikalainen",
      "vastaanotettu": "***unittest***",
      "vastattu": true,
      "yhteydenottotapaEmail": false,
      "yhteydenottotapaPuhelin": true,
    },
  ],
}
`;

exports[`Palaute should insert and manage feedback 3`] = `
Array [
  Object {
    "subject": "Suunnitelmaan on tullut palautetta",
    "text": "Suunnitelmaan on tullut palautetta: https://localhost:3000/yllapito/projekti/1.2.246.578.5.1.2978288874.2711575506/suunnittelu",
    "to": "mikko.haapamaki@cgi.com",
  },
  Object {
    "subject": "Vahvistus palautteen jättämisestä Valtion liikenneväylien suunnittelu -järjestelmän kautta",
    "text": "Palaute vastaanotettu
01.01.2023 00:00
Nimi
Matti Meikalainen
Sähköposti
test@vayla.fi
Puhelinnumero
123456

Suunnitelman nimi
HASSU AUTOMAATTITESTIPROJEKTI1
Palaute
Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Sähköpostiviestin liitteet
logo.png
",
    "to": "test@vayla.fi",
  },
  Object {
    "subject": "Suunnitelmaan on tullut palautetta",
    "text": "Suunnitelmaan on tullut palautetta: https://localhost:3000/yllapito/projekti/1.2.246.578.5.1.2978288874.2711575506/suunnittelu",
    "to": "mikko.haapamaki@cgi.com",
  },
  Object {
    "subject": "Vahvistus palautteen jättämisestä Valtion liikenneväylien suunnittelu -järjestelmän kautta",
    "text": "Palaute vastaanotettu
01.01.2023 00:00
Nimi
Joku Toinen
Sähköposti
test@vayla.fi
Puhelinnumero
123456

Suunnitelman nimi
HASSU AUTOMAATTITESTIPROJEKTI1
Palaute
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.

",
    "to": "test@vayla.fi",
  },
  Object {
    "subject": "Suunnitelmaan on tullut palautetta",
    "text": "Suunnitelmaan on tullut palautetta: https://localhost:3000/yllapito/projekti/1.2.246.578.5.1.2978288874.2711575506/suunnittelu",
    "to": "mikko.haapamaki@cgi.com",
  },
]
`;

exports[`Palaute should insert and manage feedback 4`] = `
Object {
  "yllapito S3 files should insert and manage feedback": Object {
    "/***unittest***/logo.png": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "checksum": "ABC123",
    },
  },
}
`;
